# 2D-Game-Reinforcement-Learning-Training-Environment

./: CMakeLists.txt  README.md  bnr.sh
src/: env.hpp  example.cpp  game.hpp  main.cpp
